# RAPIDO-opt-in-ASSURED-PAY

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vercel.json
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/api/: __init__.py  analytics.py  assist.py  assured_pay.py  booking.py  captain.py  disputes.py  fare.py  health.py  placeholders.py  residual_due.py  ride.py  riders.py  router.py  settlement.py  support.py  version.py
backend/app/core/: __init__.py  config.py
backend/app/domain/: __init__.py  analytics_events.py  eligibility.py  enums.py  fare.py  live_ride.py  policy.py  reason_codes.py  rebooking.py  recovery_policy.py  settlement.py
backend/app/models/: __init__.py
backend/app/ports/: __init__.py
backend/app/schemas/: __init__.py  analytics.py  assist.py  assured_pay.py  common.py  fare.py  recovery.py  settlement.py
backend/tests/: test_analytics_api.py  test_analytics_service.py  test_assured_pay_api.py  test_discovery_service.py  test_dispute_service.py  test_due_state_transitions.py  test_enums.py  test_fare.py  test_fare_api.py  test_fare_engine.py  test_grok_adapter.py  test_grok_api.py  test_grok_validator.py  test_health.py  test_payout_model.py  test_placeholder_routers.py  test_rebooking_eligibility.py  test_recovery_api.py  test_residual_due.py  test_ride_progress.py  test_settings.py  test_settlement_api.py  test_settlement_service.py  test_version.py
(+222 files in other folders)
